fix: forsøk på jpackage